[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "traffic-forecasting"
version = "0.1.0"
description = "MnDOT station-day traffic volume forecasting (global model)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pandas>=2.0",
  "numpy>=1.24",
  "scikit-learn>=1.3",
  "matplotlib>=3.8",
  "plotly>=5.18",
  "kaleido>=0.2.1",
  "tqdm>=4.66",
  "rich>=13.7",
]

[project.optional-dependencies]
full = [
  "xgboost>=2.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
